--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <header>
-      <h1>My Favorite Movies</h1>
+      <h1>My Favourite Movies</h1>
       <button>Add a movie</button>
     </header>
 
